# circuit-tracks-tools

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  feasibility-report.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
docs/: ncs-format.md  sysex-file-protocol.md
example-patches/: BatGirl.syx  Macro14Filter.syx  Macro14Mixer.syx  Macro14Osc1.syx  Macro14Osc2.syx  Macro1ChPh4.syx  Macro1ChPhLevel.syx  Macro1DistLevel.syx  Macro1DistLvl.syx  Macro1Env1Attack.syx  Macro1Env3Delay.syx  Macro1FilterDriv.syx  Macro1FilterFreq.syx  Macro1FilterReso.syx  Macro1LFO1Rate.syx  Macro1Mdmtrx1234.syx  Macro1Osc1dnsdet.syx  Macro1PostFx.syx  Macro1ToOsc1Lvl.syx  Macro1VoicePort.syx  Macros4Env.syx  MacrosLFOs.syx  Mod1ChorusLvl.syx
example-projects-ncs/: 1Note.ncs  1scene3to5.ncs  2 notes.ncs  2Scenes.ncs  3Scenes.ncs  ChainD1Only.ncs  DelaySendD1Only.ncs  DelaySendS2Only.ncs  Drum1AllKnobs.ncs  FXBypass.ncs  FXFinal.ncs  FXFinalPurple.ncs  FXFinalRed.ncs  FXFinalYellow.ncs  FXTestFixed.ncs  MIDISettings.ncs  MixerAndSends.ncs  MixerLevelPanSynth1.ncs  MuteAndLevels.ncs  NightChain.ncs  NightChainWithScenes.ncs  Nightdrive3Fixed.ncs  ScaleAndFX.ncs  SceneAndChains.ncs  SceneTest2.ncs  Synth1AllKnobs.ncs  TiedNote.ncs  WithDrums.ncs
example-projects-ncs/fxs/: Del10Rvrb1.ncs  Del11Rvrb1.ncs  Del12Rvrb1.ncs  Del13Rvrb1.ncs  Del14Rvrb1.ncs  Del15Rvrb1.ncs  Del16Rvrb1.ncs  Del1Rvrb1.ncs  Del2Rvrb1.ncs  Del3Rvrb1.ncs  Del4Rvrb1.ncs  Del5Rvrb1.ncs  Del6Rvrb1.ncs  Del7Rvrb1.ncs  Del8Rvrb1.ncs  Del9Rvrb1.ncs  Reverb1.ncs  Reverb2.ncs  Reverb3.ncs  Reverb4.ncs  Reverb5.ncs  Reverb6.ncs  Reverb7.ncs  Reverb8.ncs
midi-monitor/: sysex_capture.json  sysex_capture_read_project.json  sysex_capture_send_patch.json  sysexprojectsend.mmon
plans/: ncs-format-reverse-engineering.md  ncs-transfer-protocol.md  patch-save-protocol.md  song-format.md
scripts/: capture_fx_presets.py  capture_sysex.js
src/circuit_mcp/: constants.py  macros.py  midi.py  ncs_parser.py  ncs_transfer.py  patch.py  patch_builder.py  sequencer.py  server.py  song.py
src/circuit_mcp/content/: genre-recipes.md  instructions.md  song-format.md
src/circuit_mcp/data/: Empty.ncs
src/circuit_tracks/: API.md  README.md  __init__.py  constants.py  macros.py  midi.py  morph.py  ncs_parser.py  ncs_transfer.py  patch.py  patch_builder.py  sequencer.py  song.py  song_schema.py
tests/: test_mcp_server.py  test_ncs_parser.py  test_ncs_transfer.py  test_patch_builder.py  test_song.py
