[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuit-mcp"
version = "0.1.0"
description = "MCP server for controlling Novation Circuit Tracks via MIDI"
requires-python = ">=3.11"
dependencies = [
    "mido[ports-rtmidi]>=1.3.3",
    "mcp[cli]>=1.9.0",
]

[project.scripts]
circuit-mcp = "circuit_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/circuit_mcp"]

[tool.hatch.build.targets.editable]
packages = ["src/circuit_mcp"]
