[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuit-tracks-tools"
version = "0.0.1"
description = "Python library and MCP server for controlling Novation Circuit Tracks via MIDI"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Namir Sayed-Ahmad Baraza" },
]
keywords = ["midi", "novation", "circuit-tracks", "synthesizer", "mcp", "music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "mido[ports-rtmidi]>=1.3.3",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.9.0"]

[project.urls]
Homepage = "https://github.com/namirsab/circuit-tracks-tools"
Repository = "https://github.com/namirsab/circuit-tracks-tools"

[project.scripts]
circuit-tracks-mcp = "circuit_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/circuit_tracks", "src/circuit_mcp"]

[tool.hatch.build.targets.editable]
packages = ["src/circuit_tracks", "src/circuit_mcp"]
